# from-similar

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md
.changes/: config.json  oss-release.md  repo-url.md
.github/workflows/: check.yml  covector-status.yml  covector-version-or-publish.yml
src/: from_similar.rs  lib.rs
tests/: compile_fail.rs  working.rs
tests/compile_fail/: defined_bidirectional_twice.rs  defined_bidirectional_twice.stderr  defined_input_twice.rs  defined_input_twice.stderr  missing_from.rs  missing_from.stderr  missing_from_input.rs  missing_from_input.stderr  missing_use_into.rs  missing_use_into.stderr  unit_no_bidirectional.rs  unit_no_bidirectional.stderr  unit_no_bidirectional_default.rs  unit_no_bidirectional_default.stderr  unsupported_enums.rs  unsupported_enums.stderr  unsupported_from_self.rs  unsupported_from_self.stderr  unsupported_generics_self.rs  unsupported_generics_self.stderr  unsupported_generics_shorthand.rs  unsupported_generics_shorthand.stderr
