[package]
name = "from-similar"
description = "Automatically implements `From` between two structs that are similar."
repository = "https://github.com/crabnebula-dev/from-similar"
authors = ["CrabNebula Ltd."]
license = "Apache-2.0 OR MIT"
version = "1.0.0"
edition = "2021"
rust-version = "1.71.1"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
bson = { version = "3", features = ["chrono-0_4", "serde"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
trybuild = "1.0"
